overflow-y corrected

--- a/src/App.css
+++ b/src/App.css
@@ -15,4 +15,5 @@ body {
   background-color: #181a25;
   color: white;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
