--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,8 +1,8 @@
 footer {
   background-color: #2b2d42;
   text-align: center;
-  padding: 1.45rem;
-  margin-top: 3.5rem;
+  padding: 1rem;
+  margin-top: 3.2rem;
 }
 
 footer h4 {
